# AI-Traffic-Intelligence-System

./: .gitignore  ATOS_MASTER_BLUEPRINT.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Readme.md  atos_final_walkthrough.md  atos_master_knowledge_guide.md  bootstrap_build.bat  build_atos.bat  build_log.txt  debug_compile.bat  debug_detector.bat  debug_main.bat  demo.py  final_run_atos.bat  live_mobile_atos.bat  pyproject.toml  requirements.txt  run.bat  run_atos.bat  run_atos_telem_test.py  test.py  test_compile.bat  verify_peak_accuracy.py
.github/workflows/: ci.yml
config/: settings.yaml
include/analytics/: anomaly.hpp  density_engine.hpp  forecasting.hpp
include/control/: signal_control.hpp
include/core/: concurrent_queue.hpp  logger.hpp  memory.hpp  stream_manager.hpp  thread_pool.hpp  types.hpp
include/engine/: detector.hpp
include/network/: city_controller.hpp  graph.hpp  reid.hpp
include/simulation/: digital_twin.hpp
legacy/: config.yaml  test.py
legacy/src/: density_analyzer.py  heatmap.py  multi_camera.py  pipeline.py  predictor.py  signal_optimizer.py  speed_analyzer.py
output/: benchmark_report.txt  metrics.csv  performance_report.txt
scripts/: generate_synthetic_video.py
src/: __init__.py  anomaly_detector.py  dashboard.py  database.py  density_analyzer.py  detection.py  heatmap.py  main.cpp  multi_camera.py  pipeline.py  predictor.py  signal_optimizer.py  speed_analyzer.py  tracker.py  utils.py
src/analytics/: anomaly.cpp  density.cpp  density.hpp  density_engine.cpp  forecasting.cpp
src/control/: signal_control.cpp
src/core/: capture.hpp  config_loader.cpp  config_loader.hpp  logger.cpp  logger.hpp  stream_manager.cpp  thread_pool.cpp  types.hpp
src/cuda/: heatmap.cu  kernel_fusion.cu  nms.cu  nms_kernel.cu  preprocess.cu
src/engine/: detector.cpp  detector.hpp
src/network/: city_controller.cpp  graph.cpp
src/simulation/: digital_twin.cpp
tools/: export_model.py
